--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,6 +2,7 @@
     <head>
         <title>Keeper</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
 
     </head>
     <body>
