--- a/views/match/match.ejs
+++ b/views/match/match.ejs
@@ -1,11 +1,13 @@
-<head>
-        <title>Keeper</title>
+<html>
+    <head>
+        <title>Keeper - New Match</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/main.css">
+
     </head>
     <body>
-           <button><a href="/logout">Logout</a></button>
-            
-            
+        <h1>New Match</h1>
+        
     </body>
-   
+</html>
+
