--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,8 +8,17 @@
             <h1>Sign Up!</h1>
 
             <form action="/register" method="post" onsubmit="if(document.getElementById('agree').checked) { return true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
-                <input type="text" name="username" placeholder="username">
-                <input type="password" name="password" placeholder="password">
+                <div>
+                    <input type="text" name="username" placeholder="username">
+
+                </div>
+                <div>
+                    <input type="password" name="password" placeholder="password">
+
+                </div>
+               
+         
+                
                 <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions and Privacy Policy
 
                 <button>Sign Up</button>
