created function to hide or display notifications. Next step: match both caller and keeper

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,7 +3,7 @@ body {
     padding-top: 60px;
 }
 
-#wallet_button {
+#profile {
     float: right;
     margin-right: 100px;
 }
@@ -22,4 +22,11 @@ body {
     
         margin: auto;
 
+}
+
+#show_matches {
+    width: 100%;
+    padding: 50px 0;
+    text-align: center;
+    margin-top: 20px;
 }
