--- a/views/index/new.ejs
+++ b/views/index/new.ejs
@@ -10,9 +10,9 @@
     <body>
         <div class="container">
             <div class="row">
-                <h1 style="text-align: center">New Partida</h1>
+                <h1 style="text-align: center">New Match</h1>
                 <div style="width: 30%; margin: 25px auto;">
-                    <form action="/cronicas" method="POST">
+                    <form action="/" method="POST">
                         <div class="form-group">
                             <input class="form-control" type="text" name="adress" placeholder="adress">
                         </div>
