--- a/views/index/new.ejs
+++ b/views/index/new.ejs
@@ -12,7 +12,7 @@
             <div class="row">
                 <h1 style="text-align: center">New Match</h1>
                 <div style="width: 30%; margin: 25px auto;">
-                    <form action="/" method="POST">
+                    <form action="/index" method="POST">
                         <div class="form-group">
                             <input class="form-control" type="text" name="adress" placeholder="adress">
                         </div>
